# ABAPCodeStudio

./: README.md  abap-code-studio-full.jsx  package-lock.json  package.json
abap-code-studio/: .gitignore  README.md  docker-compose.yml  pyproject.toml
abap-code-studio/.github/workflows/: ci.yml
abap-code-studio/agent-sdk/: agent.py  requirements.txt  tunnel.py
abap-code-studio/agent-sdk/config/: systems.example.yaml
abap-code-studio/agent-sdk/connectors/: adt_connector.py  credential_store.py  gui_connector.py  rfc_connector.py
abap-code-studio/agent-sdk/tools/: mcp_server.py
abap-code-studio/cloud-backend/: requirements.txt
abap-code-studio/cloud-backend/api/: auth_middleware.py  database.py  main.py
abap-code-studio/cloud-backend/git_integration/: git_client.py
abap-code-studio/cloud-backend/orchestrator/: agent_bridge.py  ai_orchestrator.py
abap-code-studio/frontend/: package.json
abap-code-studio/frontend/src/: api.js
abap-code-studio/infra/: Dockerfile.agent  Dockerfile.cloud
abap-code-studio/shared/models/: __init__.py  base.py
abap-code-studio/tests/: test_all.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/components/ui/: Badge.tsx  Box.tsx  Dot.tsx  Lbl.tsx  index.ts
src/components/views/: ChatView.tsx  DiffView.tsx  DocArchView.tsx  DocConnectView.tsx  DocHostingView.tsx  ExplorerView.tsx  GitView.tsx  PipelineView.tsx  PricingView.tsx  SecurityView.tsx  index.ts
src/lib/: nav.ts  theme.ts
